scrollbar little fix

--- a/src/web/frontend/sass/base/_scrollbar.scss
+++ b/src/web/frontend/sass/base/_scrollbar.scss
@@ -1,17 +1,26 @@
+$scrollbarSize: 10px;
+
 ::-webkit-scrollbar {
-	width: 10px;
+  width: $scrollbarSize;
+  height: $scrollbarSize;
 }
 
 ::-webkit-scrollbar-track {
-  border-radius: 10px;
+  border-radius: $scrollbarSize;
   background: #4d4d4d;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
+  border-radius: $scrollbarSize;
   background:  #a5a5a5;
 
   &:hover {
     background: #ccc;
   }
+}
+
+::-webkit-scrollbar-corner {
+  background: none;
+  width: $scrollbarSize;
+  height: $scrollbarSize;
 }
